# union-cli-switch

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
scripts/: install-user-service.sh
union_cli_switch/: adapters.py  skills.py  state.py  web.py
union_cli_switch/static/: style.css
union_cli_switch/templates/: index.html
