[project]
name = "union-cli-switch"
version = "0.1.0"
description = "Local GUI switch manager for AI CLI tools"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.2",
    "requests>=2.32.5",
    "tomli-w>=1.2.0",
]

[project.scripts]
union-cli-switch = "union_cli_switch.web:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["union_cli_switch"]

[tool.hatch.build.targets.wheel.force-include]
"union_cli_switch/templates" = "union_cli_switch/templates"
"union_cli_switch/static" = "union_cli_switch/static"

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
